# binary2strings

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  setup.py
conda.recipe/: meta.yaml
data/: graded_strings_interesting.csv
examples/: strings_from_file.py
src/: binary2strings.cpp  binary2strings.hpp  bindings.cpp  extracted_string.cpp  extracted_string.hpp  string_model.hpp
src/binary2strings/: binary2strings.cpp  binary2strings.hpp  bindings.cpp  crc64.hpp  extracted_string.cpp  extracted_string.hpp  known_strings.h  string_extract.hpp
tests/: strings_test.py  test.py
tools/: build_known_strings.py  github_to_string_constants.py  interesting_string_manual_grade.py  profile_strings.py  train_interesting_string_model.py  unicode_language_groups.py
